refactoring JS, call API for lenses

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="card-body">
                   <h5 class="card-title cameraName"></h5>
                   <p class="card-text cameraDescription"></p>
-                  <a href="./templates/productSheet.html" id="cardOne" class="btn btn-primary cameraPrices"></a>
+                  <a href="./templates/productSheet.html" id="cardOne" class="btn btn-primary  btn-grey cameraPrices"></a>
                 </div>
             </div>
 
@@ -88,7 +88,7 @@
                 <div class="card-body">
                   <h5 class="card-title cameraName"></h5>
                   <p class="card-text cameraDescription"></p>
-                  <a href="./templates/productSheet.html" id="cardTwo" class="btn btn-primary cameraPrices" ></a>
+                  <a href="./templates/productSheet.html" id="cardTwo" class="btn btn-primary btn-grey  cameraPrices" ></a>
                 </div>
             </div>
 
@@ -98,7 +98,7 @@
                 <div class="card-body">
                   <h5 class="card-title cameraName"></h5>
                   <p class="card-text cameraDescription"></p>
-                  <a href="./templates/productSheet.html" id="cardThree" class="btn btn-primary cameraPrices"></a>
+                  <a href="./templates/productSheet.html" id="cardThree" class="btn btn-primary  btn-grey cameraPrices"></a>
                 </div>
             </div>
 
@@ -108,7 +108,7 @@
                 <div class="card-body">
                   <h5 class="card-title cameraName"></h5>
                   <p class="card-text cameraDescription"></p>
-                  <a href="./templates/productSheet.html" id="cardFour" class="btn btn-primary cameraPrices"></a>
+                  <a href="./templates/productSheet.html" id="cardFour" class="btn btn-primary  btn-grey cameraPrices"></a>
                 </div>
             </div>
 
@@ -118,7 +118,7 @@
                 <div class="card-body">
                   <h5 class="card-title cameraName"></h5>
                   <p class="card-text cameraDescription"></p>
-                  <a href="./templates/productSheet.html" id="cardFive" class="btn btn-primary cameraPrices"></a>
+                  <a href="./templates/productSheet.html" id="cardFive" class="btn btn-primary  btn-grey cameraPrices"></a>
                 </div>
             </div>
             
