add price, title and lense in console onclick card

--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
     </div>  
     <div class="band">
         <div class="badgeContaineur">
-            <i class="fas fa-camera-retro"></i>
+            <i class="fas fa-camera-retro icon"></i>
             <p class="navbar-brand">Appareil retro</p>
         </div>
         <div class="badgeContaineur">
-            <i class="fas fa-certificate"></i>
+            <i class="fas fa-certificate icon"></i>
             <p class="navbar-brand">Qualité authentique</p>
         </div>
         <div class="badgeContaineur">
-            <i class="fas fa-globe-americas"></i>
+            <i class="fas fa-globe-americas icon"></i>
             <p class="navbar-brand">Expédition mondial</p>
         </div>
     </div>
