--- a/testingZone.html
+++ b/testingZone.html
@@ -28,28 +28,23 @@
             <thead>
               <tr>
                 <th scope="col">#</th>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
-                <th scope="col">Handle</th>
+                <th scope="col">nom</th>
+                <th scope="col">Prénom</th>
+                <th scope="col">Addresse</th>
+                <th scope="col">Ville</th>
+                <th scope="col">mail</th>
+                <th scope="col">N° de commande</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td colspan="2">Larry the Bird</td>
-                <td>@twitter</td>
+                <td id="FirstName"></td>
+                <td id="lastName"></td>
+                <td id="address"></td>
+                <td id="city"></td>
+                <td id="mail"></td>
+                <td id="orderId"></td>
               </tr>
             </tbody>
           </table>
